// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> matches snapshot with children 1`] = `
<DocumentFragment>
  <button
    class="py-[16px] px-[40px] text-base md:text-2xl font-lora bg-[#343434] cursor-pointer aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-white"
  >
    Test
  </button>
</DocumentFragment>
`;

exports[`<Button /> matches snapshot with default Button 1`] = `
<DocumentFragment>
  <button
    class="py-[16px] px-[40px] text-base md:text-2xl font-lora bg-[#343434] cursor-pointer aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-white"
  />
</DocumentFragment>
`;

exports[`<Button /> matches snapshot with disabled 1`] = `
<DocumentFragment>
  <button
    class="py-[16px] px-[40px] text-base md:text-2xl font-lora bg-[#343434] cursor-pointer aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-white"
    disabled=""
  />
</DocumentFragment>
`;

exports[`<Button /> matches snapshot with disabled 2`] = `
<DocumentFragment>
  <button
    class="py-[16px] px-[40px] text-base md:text-2xl font-lora bg-[#343434] cursor-pointer aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-white"
    disabled=""
  />
</DocumentFragment>
`;

exports[`<Button /> matches snapshot with gray theme 1`] = `
<DocumentFragment>
  <button
    class="bg-[#D9D9D9] !text-black [&>*]:text-black py-[16px] px-[40px] text-base md:text-2xl font-lora bg-[#343434] cursor-pointer aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-white"
  />
</DocumentFragment>
`;

exports[`<Button /> matches snapshot with small size 1`] = `
<DocumentFragment>
  <button
    class="text-sm md:text-base py-[12px] px-[32px] py-[16px] px-[40px] text-base md:text-2xl font-lora bg-[#343434] cursor-pointer aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-white"
  />
</DocumentFragment>
`;
